--- a/app/src/main/res/layout/activity_detail_tv_show.xml
+++ b/app/src/main/res/layout/activity_detail_tv_show.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".view.TVShowDetailActivity">
+    tools:myContext=".view.TVShowDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rv_notes"
