--- a/app/src/main/res/layout/my_favorite_widget_item.xml
+++ b/app/src/main/res/layout/my_favorite_widget_item.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:contentDescription="@string/ini_foto" />
+        android:scaleType="fitCenter" />
 
 </LinearLayout>
