--- a/app/src/main/res/xml/my_favorite_widget_infos.xml
+++ b/app/src/main/res/xml/my_favorite_widget_infos.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/favourite_widget"
-    android:initialLayout="@layout/favourite_widget"
+    android:initialKeyguardLayout="@layout/my_favorite_widget"
+    android:initialLayout="@layout/my_favorite_widget"
     android:minHeight="70dp"
     android:minWidth="140dp"
     android:previewImage="@drawable/ic_favorite_black_24dp"
