--- a/app/src/main/res/values-en/eng.xml
+++ b/app/src/main/res/values-en/eng.xml
@@ -30,10 +30,10 @@
 
 
     <string name="release_reminder">New Movie Reminder</string>
-    <string name="summary_release_reminder">Hey o! klik on if you want notification about daily movies everyday</string>
+    <string name="summary_release_reminder">Hey o! klik on if you want notification about daily movies everyday on 7 AM</string>
     <string name="key_release_reminder">key_release_reminder</string>
     <string name="daily_reminder">Daily Reminder</string>
-    <string name="summary_daily_reminder">Hey o! klik on if you want notification new movies every monday</string>
+    <string name="summary_daily_reminder">Hey o! klik on if you want notification new movies everyday on 8 AM</string>
     <string name="pref_title_notifications">Notifications</string>
     <string name="lang">Language</string>
     <string name="summary_lang">Select Language</string>
