--- a/app/src/main/res/values-in/idn.xml
+++ b/app/src/main/res/values-in/idn.xml
@@ -28,10 +28,10 @@
     <string name="text_favorit_tvShow">Serial Tv Favorit ada di sini</string>
 
     <string name="release_reminder">Pengingat Film Baru</string>
-    <string name="summary_release_reminder">Hey o! Klik aktifkan untuk notifikasi harian terasik setiap hari</string>
+    <string name="summary_release_reminder">Hey o! Klik aktifkan untuk notifikasi harian terasik setiap hari jam 7 pagi</string>
     <string name="key_release_reminder">key_release_reminder</string>
     <string name="daily_reminder">Pengingat Harian</string>
-    <string name="summary_daily_reminder">Hey o! klik aktifkan untuk notifikasi movies terbaru setiap hari senin</string>
+    <string name="summary_daily_reminder">Hey o! klik aktifkan untuk notifikasi movies terbaru setiap hari jam 8 pagi</string>
     <string name="pref_title_notifications">Notifikasi</string>
     <string name="lang">Bahasa</string>
     <string name="summary_lang">Pilih Bahasa</string>
