--- a/app/src/main/res/layout/my_favorite_widget.xml
+++ b/app/src/main/res/layout/my_favorite_widget.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="0"
-            android:background="@color/design_default_color_primary"
+            android:background="@color/colorPrimary"
             android:padding="16dp"
             android:text="MY WIDGET"
             android:textAlignment="center"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@color/design_default_color_primary"
+            android:background="@color/colorPrimary"
             android:padding="16dp"
             android:text="@string/my_favorit_movie"
             android:textAlignment="center"
