--- a/app/src/main/res/layout/my_favorite_widget_item.xml
+++ b/app/src/main/res/layout/my_favorite_widget_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter" />
+        android:contentDescription="@string/todo_photo_movie"
+        android:scaleType="fitCenter"
+        tools:srcCompat="@drawable/pikachu" />
 
 </LinearLayout>
