--- a/app/src/main/res/xml/my_favorite_widget_infos.xml
+++ b/app/src/main/res/xml/my_favorite_widget_infos.xml
@@ -6,5 +6,5 @@
     android:minWidth="140dp"
     android:previewImage="@drawable/ic_favorite_black_24dp"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"/>
